2004-11-26  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWApplication+Defaults.m (GSWAppClassDummy):
	Added method declarations to help various compiler versions
	identify the correct signaure to use.
	(+[GSWApplication setSessionTimeOutValue:]): Use it.
	(+[GSWApplication sessionTimeOutValue]); Ditto.
	
2005-03-22  Manuel Guesdon <mguesdon@orange-concept.com>
        * GSWeb.framework/GSWBrowser.m
		o fixed double HTML escaping bug (reported by David Ayers)

2005-03-21  Richard Frith-Macdonald <rfm@gnu.org>
        * GSWeb.framework/GSWRequest.m
                o cleanup GSMime access and avoid unnecessary setting of
		charset when the default is OK.

2005-03-18  Manuel Guesdon <mguesdon@orange-concept.com>
        * GSWeb.framework/NSString+HTML.m
		o fixes in GSWMemMove and 
		testStringByConvertingHTML

2005-03-11  David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWRequest.m
                o changes to support various encodings in GSMime

2005-03-10  David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWRequest.m
        * GSWeb.framework/NSString+HTML.?
                o replaced dictionaryQueryString by dictionaryQueryStringWithEncoding:
                o replaced decodeURL by decodeURLEncoding:
                debugging and coding together with David Ayers

2005-01-19  David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWElementID.m:
                o set static SEL to NULL first
        * GSWeb.framework/GSWDefaultAdaptor.m:
                o fix for __APPLE__

2004-12-31  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/common/GSWStats.c:
		o fixed type
	* GSWExtensions.framework/GSWCollapsibleComponentContent.m
		o replaced numberWithBool: by GSWNumberXX
	* GSWExtensions.framework/GSWLongResponsePage.m:
		o replaced [context senderID] by GSWContext_senderID()
	* GSWExtensionsGSW.framework/GSWCacheElement.m:
		o use GSWDynamicElement_evaluateValueInContext
		o replaced numberWithBool: by GSWNumberXX