@@ -87,9 +87,8 @@ char* GSWStats_formatStats(GSWTimeStats *p_pStats,
               if (*p=='+')
                 {
                   int aLen=0;
-                  p++;
                   char* endPtr=NULL;
-                  double val=strtof(p,&endPtr);
+                  double val=strtof(++p,&endPtr);
                   val=baseFloatSec+val;
                   p=endPtr+1;
                   sprintf(floatBuffer,"%0.3f",val);
